# silence-core

./: Cargo.toml  readme.md
.github/workflows/: typo-checker.yml
src/: lib.rs  tests.rs
src/avif/: encoding.rs  mod.rs
src/cam/: mod.rs
src/io/: mod.rs  playback.rs  record.rs
src/opencv/: capture.rs  mod.rs
src/opus/: decode.rs  encode.rs  mod.rs
