[package]
name = "silence-core"
version = "0.1.0"
edition = "2021"
description = "Core audio I/O abstractions for the silence crate."
license = "Apache-2.0"
categories = ["asynchronous", "multimedia::audio", "multimedia::encoding"]

[features]
default = ["io"]
async = []
serde = ["dep:serde"]
io = ["dep:cpal"]
opus = ["dep:opus"]

[dependencies]
anyhow = "1.0.93"
parking_lot = "0.12.3"
cpal = {version = "0.15.3", optional = true}
serde = { version = "1.0.215", optional = true, features = ["derive"] }
tokio = {version = "1.41.1", features = ["sync"]}
opus = {version = "0.3.0", optional = true}
