[package]
name = "silence-core"
version = "0.1.6"
edition = "2021"
description = "Core audio I/O abstractions for the silence crate."
license = "Apache-2.0"
categories = ["asynchronous", "multimedia::audio", "multimedia::encoding"]

[features]
# Default features
default = ["io", "opus"]

# Enables Serialization and Deserialization for structs.
serde = ["dep:serde"]

# Enables audio I/O
io = ["dep:cpal"]

# Enables opus codec encoding
opus = ["dep:opus"]

# Enables all the features
full = ["io", "opus", "serde", "av1", "opencv"]

# Enables image input
opencv = ["dep:opencv"]

# Enables image encoding to av1
av1 = ["dep:ravif", "opencv"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0.93"
parking_lot = "0.12.3"
cpal = {version = "0.15.3", optional = true}
serde = { version = "1.0.215", optional = true, features = ["derive"] }
tokio = {version = "1.41.1", features = ["sync"]}
opus = {version = "0.3.0", optional = true}
ravif = {version = "0.11.11", optional = true}
opencv = {version = "0.93.4", optional = true}
